# everybodycodes

./: .gitignore  CLAUDE.md  aoc.cabal  ec.cabal  flake.nix  readme.org
c/: day1.org  quest1.c  quest2.c
data/2025/: quest1-part1.txt  quest1-part2.txt  quest1-part3.txt  quest1.txt  quest2.txt
data/2025/quest2/: partI.txt  partII.txt
elisp/2024/: day1.el  test.org
elisp/2025/: quest1.org
lean/2025/: Quest1.lean
lean_ec/: README.md  lake-manifest.json  lakefile.toml  lean_ec.lean
src/: Main.hs
src/Y2022/: Day10.hs  Day11.hs  Day5.hs  Day7.hs  Day8.hs  Day9.hs
src/Y2023/: Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/Y2024/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  test.sh
zig/Y2022/: day1.zig
